# stamp4nlp

./: .gitignore  .gitlab-ci.yml  README.md  commands.md  cookiecutter.json  pyproject.toml
.github/: workflows.yml
{{cookiecutter.project_folder}}/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
{{cookiecutter.project_folder}}/.dvc/: config
{{cookiecutter.project_folder}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_folder}}/docs/source/_data/: role_assignment.yaml
{{cookiecutter.project_folder}}/docs/source/_datatemplates/: artifact.tmpl  role.tmpl  role_assignment.tmpl  subprocess.tmpl  task.tmpl
{{cookiecutter.project_folder}}/docs/source/_static/: 10_Goal_Specification.html  20_Domain_Discovery_and_Data_Selection.html  30_Domain_Adoption_and_Customization.html  40_Application_Engineering.html  50_Customer_Integration_and_Evaluation.html  Overview.html  Overview_index.html  theme_overrides.css
{{cookiecutter.project_folder}}/docs/source/code/: auto_doc.rst
{{cookiecutter.project_folder}}/docs/source/instance_specific_content/: convention_changes.rst  dependencies.rst  instance_specific_content.rst  project_getting_started.rst  role_assignment.rst
{{cookiecutter.project_folder}}/docs/source/process_model/: artifacts.rst  roles.rst  subprocesses.rst  tasks.rst
{{cookiecutter.project_folder}}/docs/source/welcome_pages/: convention_over_configuration.rst  folder_structure.rst  getting_started.rst  write_documentation.rst
{{cookiecutter.project_folder}}/models/: __init__.py
{{cookiecutter.project_folder}}/test/: test_{{cookiecutter.project_slug}}_api.py  test_{{cookiecutter.project_slug}}_api_default.py  test_{{cookiecutter.project_slug}}_api_predict.py
{{cookiecutter.project_folder}}/test/test_files/: hyperparameter.csv
{{cookiecutter.project_folder}}/{{cookiecutter.project_slug}}/: configuration.py  main.py
{{cookiecutter.project_folder}}/{{cookiecutter.project_slug}}/api/: main.py
{{cookiecutter.project_folder}}/{{cookiecutter.project_slug}}/api/routers/: default.py  predict.py
{{cookiecutter.project_folder}}/{{cookiecutter.project_slug}}/scripts/documentation/: main.py
(+154 files in other folders)
