[tool.poetry]
name = "{{cookiecutter.project_folder}}"
version = "0.0.1"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.project_author}} <{{cookiecutter.project_author_email}}>"]

### Begin Dependencies
[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.4"

# Fastapi
fastapi = { version = "^0.54" }
uvicorn = "^0.11.5"
python-multipart = "^0.0.5"
requests = "^2.23.0"

# cli
click = "^7.1.2"
scikit-learn = "^0.24.2"

# Documentation
sphinx = "^4.0.3"
"sphinxcontrib.datatemplates" = "^0.8.1"
pyyaml = "^5.3.1"
sphinx-rtd-theme = "^0.5.2"
myst-parser = "^0.15.1"

#Spacy
{% if cookiecutter.use_gpu.lower() == "true" %}
spacy = {version = "^3.1.1", extras = ["cuda"]}
{% else %}
spacy="^3.1.1"
{% endif %}
spacy-transformers = "^1.0.3"
"spacy-lookups-data" = "^1.0.2"

#Misc
pathlib2 = "^2.3.5"
aiofiles = "^0.6.0"
dvc = {extras = ["ssh"], version = "^2.5.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
coverage = "^5.1"
jupyterlab = "^2.2.8"
### End Dependencies

[tool.poetry.scripts]
server = "{{cookiecutter.project_slug}}.api.main:main"
gen_doc = "{{cookiecutter.project_slug}}.scripts.documentation.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
